dat:add demo check top vs click next page

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "from pathlib import Path\n",
-    "from crawling import load_chrome, open_web, login, wait_element"
+    "from Crawl.crawling import load_chrome, open_web, login, wait_element"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,16 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<selenium.webdriver.remote.webelement.WebElement (session=\"77b3795551045aed6caae3e8dbc99cba\", element=\"f.BEAF48BD7F4368A91DF3B7E9E1C4758E.d.7988FE356B43CF80F08D65148B7A4DFC.e.166\")>"
+       "<selenium.webdriver.remote.webelement.WebElement (session=\"bf80bbab8b236d6a497f8d0a1594c9f7\", element=\"f.DEB971A9F686E40E3DAC47B8E4F575D5.d.077DEE84F8063E2A1E733836824679DD.e.124\")>"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,16 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<selenium.webdriver.remote.webelement.WebElement (session=\"77b3795551045aed6caae3e8dbc99cba\", element=\"f.BEAF48BD7F4368A91DF3B7E9E1C4758E.d.7988FE356B43CF80F08D65148B7A4DFC.e.215\")>"
+       "<selenium.webdriver.remote.webelement.WebElement (session=\"bf80bbab8b236d6a497f8d0a1594c9f7\", element=\"f.DEB971A9F686E40E3DAC47B8E4F575D5.d.077DEE84F8063E2A1E733836824679DD.e.163\")>"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,16 +197,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<selenium.webdriver.remote.webelement.WebElement (session=\"77b3795551045aed6caae3e8dbc99cba\", element=\"f.BEAF48BD7F4368A91DF3B7E9E1C4758E.d.7988FE356B43CF80F08D65148B7A4DFC.e.196\")>"
+       "<selenium.webdriver.remote.webelement.WebElement (session=\"bf80bbab8b236d6a497f8d0a1594c9f7\", element=\"f.DEB971A9F686E40E3DAC47B8E4F575D5.d.077DEE84F8063E2A1E733836824679DD.e.153\")>"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,26 +228,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
+    "time.sleep(3)\n",
     "search_bt = driver.find_element(By.ID, value=\"btnTimKiem\")\n",
     "search_bt.click()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(3)\n",
+    "top_100 = driver.find_element(By.CLASS_NAME, value=\"ui.selection.floating.dropdown.w-auto\")\n",
+    "top_100.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = top_100.find_element(By.XPATH, value=\"//*[@data-value='100']\")\n",
+    "a.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<selenium.webdriver.remote.webelement.WebElement (session=\"77b3795551045aed6caae3e8dbc99cba\", element=\"f.BEAF48BD7F4368A91DF3B7E9E1C4758E.d.7988FE356B43CF80F08D65148B7A4DFC.e.200\")>"
+       "<selenium.webdriver.remote.webelement.WebElement (session=\"bf80bbab8b236d6a497f8d0a1594c9f7\", element=\"f.DEB971A9F686E40E3DAC47B8E4F575D5.d.077DEE84F8063E2A1E733836824679DD.e.1452\")>"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "current = driver.find_element(By.XPATH, value=\"//*[@ng-if='totalPage > 0']\")\n",
+    "current"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_range, last= current.find_elements(By.CLASS_NAME, value=\"ng-binding\")\n",
+    "_, end = map(int, current_range.text.split(\" - \"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3681, 3682)"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_, end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next = driver.find_element(By.XPATH, value=\"//*[@title='Trang sau']\")\n",
+    "next.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<selenium.webdriver.remote.webelement.WebElement (session=\"85889977be2e1dab0f0b957e1e93a5f0\", element=\"f.7C04613554FB67ADD6DB54D3AA0DE3EC.d.9B5E2737FF9FBFE4B591DEB9AC64CCF0.e.200\")>"
+      ]
+     },
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,26 +342,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<selenium.webdriver.remote.webelement.WebElement (session=\"77b3795551045aed6caae3e8dbc99cba\", element=\"f.BEAF48BD7F4368A91DF3B7E9E1C4758E.d.7988FE356B43CF80F08D65148B7A4DFC.e.241\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"77b3795551045aed6caae3e8dbc99cba\", element=\"f.BEAF48BD7F4368A91DF3B7E9E1C4758E.d.7988FE356B43CF80F08D65148B7A4DFC.e.242\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"77b3795551045aed6caae3e8dbc99cba\", element=\"f.BEAF48BD7F4368A91DF3B7E9E1C4758E.d.7988FE356B43CF80F08D65148B7A4DFC.e.243\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"77b3795551045aed6caae3e8dbc99cba\", element=\"f.BEAF48BD7F4368A91DF3B7E9E1C4758E.d.7988FE356B43CF80F08D65148B7A4DFC.e.244\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"77b3795551045aed6caae3e8dbc99cba\", element=\"f.BEAF48BD7F4368A91DF3B7E9E1C4758E.d.7988FE356B43CF80F08D65148B7A4DFC.e.245\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"77b3795551045aed6caae3e8dbc99cba\", element=\"f.BEAF48BD7F4368A91DF3B7E9E1C4758E.d.7988FE356B43CF80F08D65148B7A4DFC.e.246\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"77b3795551045aed6caae3e8dbc99cba\", element=\"f.BEAF48BD7F4368A91DF3B7E9E1C4758E.d.7988FE356B43CF80F08D65148B7A4DFC.e.247\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"77b3795551045aed6caae3e8dbc99cba\", element=\"f.BEAF48BD7F4368A91DF3B7E9E1C4758E.d.7988FE356B43CF80F08D65148B7A4DFC.e.248\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"77b3795551045aed6caae3e8dbc99cba\", element=\"f.BEAF48BD7F4368A91DF3B7E9E1C4758E.d.7988FE356B43CF80F08D65148B7A4DFC.e.249\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"77b3795551045aed6caae3e8dbc99cba\", element=\"f.BEAF48BD7F4368A91DF3B7E9E1C4758E.d.7988FE356B43CF80F08D65148B7A4DFC.e.250\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"77b3795551045aed6caae3e8dbc99cba\", element=\"f.BEAF48BD7F4368A91DF3B7E9E1C4758E.d.7988FE356B43CF80F08D65148B7A4DFC.e.251\")>]"
+       "[<selenium.webdriver.remote.webelement.WebElement (session=\"85889977be2e1dab0f0b957e1e93a5f0\", element=\"f.7C04613554FB67ADD6DB54D3AA0DE3EC.d.9B5E2737FF9FBFE4B591DEB9AC64CCF0.e.241\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"85889977be2e1dab0f0b957e1e93a5f0\", element=\"f.7C04613554FB67ADD6DB54D3AA0DE3EC.d.9B5E2737FF9FBFE4B591DEB9AC64CCF0.e.242\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"85889977be2e1dab0f0b957e1e93a5f0\", element=\"f.7C04613554FB67ADD6DB54D3AA0DE3EC.d.9B5E2737FF9FBFE4B591DEB9AC64CCF0.e.243\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"85889977be2e1dab0f0b957e1e93a5f0\", element=\"f.7C04613554FB67ADD6DB54D3AA0DE3EC.d.9B5E2737FF9FBFE4B591DEB9AC64CCF0.e.244\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"85889977be2e1dab0f0b957e1e93a5f0\", element=\"f.7C04613554FB67ADD6DB54D3AA0DE3EC.d.9B5E2737FF9FBFE4B591DEB9AC64CCF0.e.245\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"85889977be2e1dab0f0b957e1e93a5f0\", element=\"f.7C04613554FB67ADD6DB54D3AA0DE3EC.d.9B5E2737FF9FBFE4B591DEB9AC64CCF0.e.246\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"85889977be2e1dab0f0b957e1e93a5f0\", element=\"f.7C04613554FB67ADD6DB54D3AA0DE3EC.d.9B5E2737FF9FBFE4B591DEB9AC64CCF0.e.247\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"85889977be2e1dab0f0b957e1e93a5f0\", element=\"f.7C04613554FB67ADD6DB54D3AA0DE3EC.d.9B5E2737FF9FBFE4B591DEB9AC64CCF0.e.248\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"85889977be2e1dab0f0b957e1e93a5f0\", element=\"f.7C04613554FB67ADD6DB54D3AA0DE3EC.d.9B5E2737FF9FBFE4B591DEB9AC64CCF0.e.249\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"85889977be2e1dab0f0b957e1e93a5f0\", element=\"f.7C04613554FB67ADD6DB54D3AA0DE3EC.d.9B5E2737FF9FBFE4B591DEB9AC64CCF0.e.250\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"85889977be2e1dab0f0b957e1e93a5f0\", element=\"f.7C04613554FB67ADD6DB54D3AA0DE3EC.d.9B5E2737FF9FBFE4B591DEB9AC64CCF0.e.251\")>]"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,9 +385,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'module' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[24], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mtime\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m lst:\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m txt\u001b[38;5;241m.\u001b[39mlower():\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'module' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "time(3)\n",
     "for item in lst:\n",
@@ -314,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
