--- a/demo.ipynb
+++ b/demo.ipynb
@@ -387,21 +387,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'module' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[24], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mtime\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m lst:\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m txt\u001b[38;5;241m.\u001b[39mlower():\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'module' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "time(3)\n",
+    "time.sleep(3)\n",
     "for item in lst:\n",
     "    if item in txt.lower():\n",
     "        ob.click()"
